--- a/package.json
+++ b/package.json
@@ -2,23 +2,13 @@
     "name": "CICD-Website",
     "version": "1.0.0",
     "description": "",
-    "main": "src/js/index.js",
+    "main": "index.js",
     "scripts": {
-      "start": "node src/js/index.js",
-      "test": "jest",
-      "test:watch": "jest --watch",
-      "test:coverage": "jest --coverage"
+      "test": "jest"
     },
-    "keywords": [
-      "javascript",
-      "jest",
-      "localstorage",
-      "crud"
-    ],
-    "author": "",
-    "license": "ISC",
     "devDependencies": {
-      "jest": "^29.0.0"
+      "jest": "^29.0.0",
+      "crypto-js": "^4.1.1"
     },
     "dependencies": {}
   }
