--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
     "name": "CICD-Website",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/js/index.js",
     "scripts": {
-      "test": "jest"
+      "start": "node src/js/index.js",
+      "test": "jest",
+      "test:watch": "jest --watch",
+      "test:coverage": "jest --coverage"
     },
+    "keywords": [
+      "javascript",
+      "jest",
+      "localstorage",
+      "crud"
+    ],
+    "author": "",
+    "license": "ISC",
     "devDependencies": {
-      "jest": "^29.0.0",
-      "crypto-js": "^4.1.1"
+      "jest": "^29.0.0"
     },
     "dependencies": {}
   }
